# bapsf_motion

./: .gitattributes  .gitignore  .readthedocs.yml  MainWindow.py  README.md  paintergui.py  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml  test.yml
bapsf_motion/: __init__.py
bapsf_motion/actors/: axis_.py  base.py  drive_.py  manager_.py  motion_group_.py  motor_.py
bapsf_motion/actors/demos/: drive_timed_run_1D.py  drive_timed_run_2D.py  mgroup_timed_run_2D.py
bapsf_motion/examples/: 20240627_2D_test_setup.toml  20241004_2D_test_setup.toml  bapsf_motion.toml  benchtop_motion_group.toml  benchtop_run.toml  motion_group.toml
bapsf_motion/gui/: __init__.py  configure.py  helpers.py  lapd_xy_transform_calculator.py
bapsf_motion/gui/configure/: __init__.py  bases.py  configure.qss  configure_.py  drive_overlay.py  helpers.py  motion_builder_overlay.py  motion_group_widget.py  motion_space_display.py  parameter_hints.toml  transform_overlay.py
bapsf_motion/gui/widgets/: __init__.py  buttons.py  logging.py  misc.py
bapsf_motion/motion_builder/: __init__.py  core.py  item.py
bapsf_motion/motion_builder/exclusions/: __init__.py  base.py  circular.py  divider.py  helpers.py  lapd.py  shadow.py
bapsf_motion/motion_builder/layers/: __init__.py  base.py  helpers.py  regular_grid.py
bapsf_motion/transform/: __init__.py  base.py  helpers.py  identity.py  lapd.py  lapd_droop.py
bapsf_motion/utils/: __init__.py  toml.py  units_.py
docs/: available_transformers.rst  bibliography.bib  common_links.rst  conf.py  glossary.rst  index.rst  install.rst  notebooks_.rst
docs/_static/css/: overrides.css
docs/api_static/: bapsf_motion.actors.axis_.rst  bapsf_motion.actors.base.rst  bapsf_motion.actors.drive_.rst  bapsf_motion.actors.manager_.rst  bapsf_motion.actors.motion_group_.rst  bapsf_motion.actors.motor_.rst  bapsf_motion.actors.rst  bapsf_motion.gui.configure.bases.rst  bapsf_motion.gui.configure.configure_.rst  bapsf_motion.gui.configure.drive_overlay.rst  bapsf_motion.gui.configure.helpers.rst  bapsf_motion.gui.configure.motion_builder_overlay.rst  bapsf_motion.gui.configure.motion_group_widget.rst  bapsf_motion.gui.configure.motion_space_display.rst  bapsf_motion.gui.configure.rst  bapsf_motion.gui.configure.transform_overlay.rst  bapsf_motion.gui.helpers.rst  bapsf_motion.gui.motor.rst  bapsf_motion.gui.rst  bapsf_motion.gui.widgets.buttons.rst  bapsf_motion.gui.widgets.logging.rst  bapsf_motion.gui.widgets.misc.rst  bapsf_motion.gui.widgets.rst  bapsf_motion.motion_builder.core.rst  bapsf_motion.motion_builder.exclusions.base.rst  bapsf_motion.motion_builder.exclusions.circular.rst  bapsf_motion.motion_builder.exclusions.divider.rst  bapsf_motion.motion_builder.exclusions.helpers.rst  bapsf_motion.motion_builder.exclusions.lapd.rst  bapsf_motion.motion_builder.exclusions.rst  bapsf_motion.motion_builder.exclusions.shadow.rst  bapsf_motion.motion_builder.item.rst  bapsf_motion.motion_builder.layers.base.rst  bapsf_motion.motion_builder.layers.helpers.rst  bapsf_motion.motion_builder.layers.regular_grid.rst  bapsf_motion.motion_builder.layers.rst  bapsf_motion.motion_builder.rst  bapsf_motion.motion_list.core.rst  bapsf_motion.motion_list.exclusions.base.rst  bapsf_motion.motion_list.exclusions.circular.rst  (+21 more)
docs/motion_builder/: index.rst
docs/motion_list/: index.rst
docs/notebooks/motion_list/: CircularExclusion.ipynb  LaPDXYExclusion.ipynb  Shadow2DExclusion.ipynb  exclusion_circular.ipynb  exclusion_lapd_XY.ipynb  motionlist.ipynb
docs/notebooks/prototypes/: README.md
docs/notebooks/transform/: LaPD6KTransform.ipynb  identity_transform.ipynb  lapd_xy_droop_correction.ipynb  lapd_xy_transform.ipynb
docs/toml/: index.rst
requirements/: 32bit.txt  docs.txt  extras.txt  gui.txt  install-32bit.txt  install.txt  readthedocs.txt  tests.txt
resources/: README.md
src/bapsf_motion/: MainWindow.py  Motor_Control_2D_new.py  Single_Motor_Control.py  __init__.py  backend.py  gui2.py  paintergui.py  runtherun.py
src/bapsf_motion/actors/: __init__.py  axis_.py  base.py  drive_.py  manager_.py  motion_group_.py  motor_.py
src/bapsf_motion/actors/demos/: mgroup_timed_run_2D.py
src/bapsf_motion/configurator/: __init__.py  config_gui_backend.py  group_configurator_backend.py  main_window.py  motion_list_configurator_backend.py  paintergui.py  toml_loader.py
src/bapsf_motion/controllers/: __init__.py  drive.py  labview_handler.py  motion_group.py  motor.py  runtherun.py
src/bapsf_motion/examples/: mg_1d.toml  mg_2d_strb_test_setup.toml  motion_group.toml
src/bapsf_motion/gui/: LAPD.py  LAPD.qrc  __init__.py  main_window.py  motor.py  widgets.py
src/bapsf_motion/gui/widgets/: __init__.py  misc.py
src/bapsf_motion/motion_builder/: core.py  item.py
src/bapsf_motion/motion_builder/exclusions/: __init__.py  base.py  circular.py  divider.py  helpers.py  lapd.py
src/bapsf_motion/motion_builder/layers/: __init__.py  base.py  helpers.py  regular_grid.py
src/bapsf_motion/motion_list/: __init__.py  core.py  item.py
src/bapsf_motion/motion_list/exclusions/: __init__.py  base.py  circular.py  divider.py  helpers.py  lapd.py
src/bapsf_motion/motion_list/layers/: base.py  (+3 more)
src/bapsf_motion/transform/: __init__.py  base.py  helpers.py  identity.py  lapd.py
src/bapsf_motion/utils/: __init__.py  exceptions.py
src/labview/: README.md  TestVI2.vi  bapsf_motion.vi  bapsf_motion_interface.py  bapsf_motion_lv.lvproj  bapsf_motion_lv.vi  configure_dash_.py  configure_gui.py
src/labview/helpers/: check_py_session.vi  start_py.vi  stop_py.vi
src/labview/requests/: cleanup.vi  configure.vi  configure_old20240124.vi  connect.vi  device_request.vi  disconnect.vi  foo.py  foo.vi  get_config.vi  get_int_names.vi  get_integers.vi  heartbeat.vi  init.vi  initialize.vi  labview_handler.py  last_index.vi  load_config.vi  load_config_.vi  move_thru_motion_list.vi  move_to_index.vi  runtherun.py  set_velocity.vi  stop.vi
src/labview/test/: test_daq_caller.vi
src/labview/typedefs/: Device-specific request defs.ctl
src/labview/utils/: faux_daq.vi
(+7 files in other folders)
